Fixup warning due to deprecated Runtime.exec(String) (in Examples only)